// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`terraformPlan > matches the snapshot for 'summarized no changes output (-no-col…' 1`] = `"No changes. Your infrastructure matches the configuration."`;

exports[`terraformPlan > matches the snapshot for 'summarized no changes output' 1`] = `"[0m[1m[32mNo changes.[0m[1m Your infrastructure matches the configuration.[0m"`;

exports[`terraformPlan > matches the snapshot for 'summarized terraform actions output (…' 1`] = `
"Terraform will perform the following actions:

  # azurerm_resource_group.example2 will be updated in-place
  ~ resource "azurerm_resource_group" "example2" {
        id         = "/subscriptions/35e6e3b2-4388-470e-a1b9-ad3bc34326d1/resourceGroups/plantest-example-rg-02"
        name       = "plantest-example-rg-02"
      ~ tags       = {
          ~ "PRIVATE_KEY" = "[REDACTED]" -> "[REDACTED]"
        }
        # (2 unchanged attributes hidden)
    }

Plan: 0 to add, 1 to change, 0 to destroy."
`;

exports[`terraformPlan > matches the snapshot for 'summarized terraform actions output' 1`] = `
"Terraform will perform the following actions:

[1m  # azurerm_resource_group.example2[0m will be updated in-place
[0m  [33m~[0m[0m resource "azurerm_resource_group" "example2" {
        id         = "/subscriptions/35e6e3b2-4388-470e-a1b9-ad3bc34326d1/resourceGroups/plantest-example-rg-02"
        name       = "plantest-example-rg-02"
      [33m~[0m[0m tags       = {
          [33m~[0m[0m "PRIVATE_KEY" = "[REDACTED]" [33m->[0m[0m "[REDACTED]"
        }
        [90m# (2 unchanged attributes hidden)[0m[0m
    }

[1mPlan:[0m [0m0 to add, 1 to change, 0 to destroy."
`;

exports[`terraformPlan > matches the snapshot for 'verbose output' 1`] = `
"[0m[1mazurerm_resource_group.example2: Refreshing state... [id=/subscriptions/35e6e3b2-4388-470e-a1b9-ad3bc34326d1/resourceGroups/plantest-example-rg-02][0m
[0m[1mazurerm_resource_group.example: Refreshing state... [id=/subscriptions/35e6e3b2-4388-470e-a1b9-ad3bc34326d1/resourceGroups/plantest-example-rg-01][0m

Terraform used the selected providers to generate the following execution
plan. Resource actions are indicated with the following symbols:
  [33m~[0m update in-place[0m

Terraform will perform the following actions:

[1m  # azurerm_resource_group.example2[0m will be updated in-place
[0m  [33m~[0m[0m resource "azurerm_resource_group" "example2" {
        id         = "/subscriptions/35e6e3b2-4388-470e-a1b9-ad3bc34326d1/resourceGroups/plantest-example-rg-02"
        name       = "plantest-example-rg-02"
      [33m~[0m[0m tags       = {
          [33m~[0m[0m "PRIVATE_KEY" = "[REDACTED]" [33m->[0m[0m "[REDACTED]"
        }
        [90m# (2 unchanged attributes hidden)[0m[0m
    }

[1mPlan:[0m [0m0 to add, 1 to change, 0 to destroy."
`;
